# 200819_DigitalGeometryProcessing

./: .gitignore  README.md
Hw/hw_2/: CMakeLists.txt
Hw/hw_2/my_map/include/: MyMap.h  MyMapMesh.h
Hw/hw_2/my_map/src/: MyMap.cpp  Viewer.cpp
Hw/hw_skeleton/: CMakeLists.txt
Hw/hw_skeleton/my_map/: CMakeLists.txt  README.md
Hw/hw_skeleton/my_map/include/: MyMap.h  MyMapMesh.h
Hw/hw_skeleton/my_map/src/: MyMap.cpp  Viewer.cpp
Surface_Framework_VS2017/: README.md  SurfaceMeshProcessing.sln
Surface_Framework_VS2017/SurfaceMeshProcessing/: MeshDefinition.cpp  MeshDefinition.h  MeshParamWidget.cpp  MeshParamWidget.h  SurfaceMeshProcessing.vcxproj  SurfaceMeshProcessing.vcxproj.filters  main.cpp  surfacemeshprocessing.cpp  surfacemeshprocessing.h  surfacemeshprocessing.qrc
Surface_Framework_VS2017/SurfaceMeshProcessing/MeshViewer/: InteractiveViewerWidget.cpp  InteractiveViewerWidget.h  MainViewerWidget.cpp  MainViewerWidget.h  MeshViewerWidget.cpp  MeshViewerWidget.h  QGLViewerWidget.cpp  QGLViewerWidget.h
